Deleted some code and fixed code with alt-shift f

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,8 @@ h2 {
 }
 
 
-h1, h2 {
+h1,
+h2 {
     font-family: lato;
 }
 
@@ -46,7 +47,7 @@ h1, h2 {
 .navigation-right {
     margin-top: 30px;
     margin-right: 20px;
-    
+
 }
 
 .color-letter {
@@ -85,36 +86,24 @@ a:hover {
 
 /* gallery images */
 
-/*
-
-img {
-    max-width: 330px;
-    max-height: 390px;
-    margin-left: 10px;
-    border-radius: 20px;
-}
-*/
 
 div.gallery {
     margin: 5px;
     float: left;
     width: 180px;
-  }
-  
-  div.gallery:hover {
-    /*
-    border: 1px solid #777;
-    */
+}
+
+div.gallery:hover {
     background-color: #E6C4E5;
-  }
-  
-  
-  div.gallery img {
+}
+
+
+div.gallery img {
     width: 100%;
     height: auto;
-  }
-  
-  div.desc {
+}
+
+div.desc {
     padding: 15px;
     text-align: center;
-  }
+}
